apps/lobe-chat/deploy-casdoor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose -f compose.yaml convert
    kompose.version: 1.34.0 (HEAD)
  labels:
    io.kompose.service: casdoor
  name: casdoor
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: casdoor
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose -f compose.yaml convert
        kompose.version: 1.34.0 (HEAD)
      labels:
        io.kompose.service: casdoor
    spec:
      containers:
        - command:
            - /bin/sh
            - -c
            - ./server --createDatabase=true
          image: casbin/casdoor:v1.1000.0
          imagePullPolicy: IfNotPresent
          name: lobe-casdoor
          ports:
            - containerPort: 8000
              protocol: TCP
          volumeMounts:
            - mountPath: /init_data.json
              name: casdoor-cm0
              subPath: init_data.json
          resources:
            requests:
              cpu: 1m
              memory: 64Mi
            limits:
              memory: 256Mi
          livenessProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 5
          readinessProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 3
          startupProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 30
      restartPolicy: Always
      volumes:
        - configMap:
            defaultMode: 420
            items:
              - key: init_data.json
                path: init_data.json
            name: casdoor-cm0
          name: casdoor-cm0
