apps/lobe-chat/deploy-lobe.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose -f compose.yaml convert
    kompose.version: 1.34.0 (HEAD)
  labels:
    io.kompose.service: lobe
  name: lobe
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: lobe
  template:
    metadata:
      annotations:
        kompose.cmd: kompose -f compose.yaml convert
        kompose.version: 1.34.0 (HEAD)
      labels:
        io.kompose.service: lobe
    spec:
      containers:
        - env:
            - name: APP_URL
              value: https://lobe.west-beta.ts.net
            - name: AUTH_CASDOOR_ID
              valueFrom:
                secretKeyRef:
                  name: lobe-auth
                  key: AUTH_CASDOOR_ID
            - name: AUTH_CASDOOR_ISSUER
              value: https://casdoor.west-beta.ts.net
            - name: AUTH_CASDOOR_SECRET
              valueFrom:
                secretKeyRef:
                  name: lobe-auth
                  key: AUTH_CASDOOR_SECRET
            - name: DATABASE_URL
              valueFrom:
                secretKeyRef:
                  name: lobe-db-secrets
                  key: LOBE_DATABASE_URL
            - name: KEY_VAULTS_SECRET
              valueFrom:
                secretKeyRef:
                  name: lobe-auth
                  key: KEY_VAULTS_SECRET
            - name: LLM_VISION_IMAGE_USE_BASE64
              value: "1"
            - name: AUTH_SECRET
              valueFrom:
                secretKeyRef:
                  name: lobe-auth
                  key: AUTH_SECRET
            - name: AUTH_SSO_PROVIDERS
              value: casdoor
            # https://lobehub.com/zh/docs/self-hosting/environment-variables/auth#jwks-key
            - name: JWKS_KEY
              value:
                "{\"keys\":[{\"d\":\"B_AeLrsWQrKSyOh1ndsciNIAPkunVjs_qkArZ1muUeeB1isOCDk\
                fwpyGgSKXtDLb8GLjk0S7ZnBA___1_RvWFS2r7BuJvDfAlFNzn1icWRVF8OGsQO\
                nz7HqV9sEJrRKvuOhJiAanLAKe-2bU-T3ljL9Zsb68wMSH2zYuDJIsNs97Ra7ru\
                Pjw-5xRWoMGM_8vf5HLXHHBOu3Vtk71eI8QkABsoeY3vf3AgiCqoWftmiAZIbZp\
                NnqNC0JQ3XV-OeVBMe2sxj9w3BkrZ5-cwGwTUT91DEKolPTOCJfNuTOdEVTyWE0\
                thVsidalxoUSzSftdyoZGAfV4lkP2-hsEkoEJWQ\",\"dp\":\"kjv89lfLfnqJ\
                u-LpK_ziQlP3fC1HVkDszEe9i3jbKK7M68ZjWfyfB_h4k4n7K3Y9o6DwlVaUyr2\
                lmXmh0uemartai9wRoRN8fin4fHnjEx8ZCgfcDg2EWCnyK3YFLdUBdEU6usRj92\
                Z_TwLtBS7dKrolk8S-8WrGVXdw0Bx15CU\",\"dq\":\"k63Ruj7inTUZNjyOlt\
                1ex4-QArYjPrIUAVizEGD9lhmFBIS1u4Ov_u84F1h4ICfbH8KSW7coCiifRmFsh\
                BI98VEcj_R5uLWDo95Yj_pmZGtDwRfUtg7GEP8vj0lX4x86A97WQvWJRy1GDD2X\
                c1ttuDR-I9Web67GqE6rsYXOiVE\",\"e\":\"AQAB\",\"kty\":\"RSA\",\"n\
                \":\"qar8zP67pNdBJmKJUJa1JNKnwoqX-TPajciBNJCxFFf6kuGHPQD8kZP4n9\
                bhd17thuwjv2cnhRIyMyZAkqccbiIStil7el7GMDuqICnxa0Tzzycgka7G1IeEN\
                b23LS950o2qq2yZAzJ4Xo2M0LDm4YfynxaK6r9GvOO0QIeoBqkJcNZC3HwyB3Gh\
                19bZ5gtCUbDjDgg15sr0FadG1dqGATg_u635FMTyLoubLykAa4nOoNHqkoJszKb\
                1bQGSs46MrsBEK5KVY_fcLZVVMxlV3T8ARNa6BHs2Be1HrmMftVGC1HSKct-flU\
                Bti3et4IZnM5B2pJdAW1adndaOnYgJEw\",\"p\":\"1fOse20zx6lFBHMy2KKS\
                XpABvPpuRmNYU8klXEn3wZpTtLenZV-Yg-aJb4PoTV3zRw2F5NB_Sw10hl4uFti\
                EPK5csZH1oMVQvYCXpU3kwaNqxmiqer7T7He1mRt4Xpumq2vQfxkDZL9g1UC0u8\
                AM8q4VCtZr3ecDKuJrpWmLqvs\",\"q\":\"ywNN-wqlxu2dtSIJypo6xaoPMrE\
                Vy44LuXzOosUPlApppU10lGLSvyOpN12dQ28TbQbfvWEubzORjGySTY4FSBGEAZ\
                hULvMPhrIxoSRoxO4ple70h41zt9CprXXR3XpnyF-YDN1uM_NP9umQNK63uzFGc\
                V2xm5zX0XYwesiCPsk\",\"qi\":\"1fDsr9BhQDbDO8L94kLe0evVz6RbYHNKP\
                PLOWiNbeyW0gmnFzKm6n2zvB5KBCX6V5eSXRmtxAJQ7C6Gwxs9knC47fWeUdznL\
                fv_XJNtaSreTadTzSoZJU_cbhRPJek3vXREAu8Kdlz9bJ2k_fMciMgpXed7I7Pr\
                0sshZ8zKEMZQ\",\"use\":\"sig\",\"kid\":\"11011992426f2cfa\",\"a\
                lg\":\"RS256\"}]}"
            - name: CASDOOR_WEBHOOK_SECRET
              value: 374a892701
            - name: S3_BUCKET
              value: lobe
            - name: S3_ENABLE_PATH_STYLE
              value: "1"
            - name: S3_ENDPOINT
              value: https://rustfs.west-beta.ts.net
            - name: S3_PUBLIC_DOMAIN
              value: https://rustfs.west-beta.ts.net
            - name: S3_ACCESS_KEY_ID
              valueFrom:
                secretKeyRef:
                  name: lobe-s3-secrets
                  key: S3_ACCESS_KEY_ID
            - name: S3_SECRET_ACCESS_KEY
              valueFrom:
                secretKeyRef:
                  name: lobe-s3-secrets
                  key: S3_SECRET_ACCESS_KEY
            - name: DEEPSEEK_API_KEY
              valueFrom:
                secretKeyRef:
                  name: lobe-ai-api-keys
                  key: DEEPSEEK_API_KEY
            - name: ENABLED_OPENAI
              value: "0"
            - name: OLLAMA_PROXY_URL
              value: http://ollama.ollama:11434
            - name: ZHIPU_API_KEY
              valueFrom:
                secretKeyRef:
                  name: lobe-ai-api-keys
                  key: ZHIPU_API_KEY
            # 默认只支持embedding_length=1024的embeddings模型
            - name: DEFAULT_FILES_CONFIG
              value: embedding_model=ollama/qwen3-embedding:0.6b
            - name: SEARCH_PROVIDERS
              value: searxng
            - name: SEARXNG_URL
              value: http://searxng.searxng:8080
            - name: REDIS_URL
              value: redis://redis:6379
            - name: REDIS_PREFIX
              value: lobechat
            - name: REDIS_TLS
              value: "0"
          image: docker.io/lobehub/lobehub:2.2.0
          imagePullPolicy: Always
          name: lobe-chat
          ports:
            - containerPort: 3210
              name: 3210tcp
              protocol: TCP
          resources:
            requests:
              cpu: 10m
              memory: 768Mi
            limits:
              memory: 1Gi
          livenessProbe:
            tcpSocket:
              port: 3210
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /
              port: 3210
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 3
          startupProbe:
            httpGet:
              path: /
              port: 3210
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 30
      restartPolicy: Always
