apps/lobe-chat/deploy-postgresql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose -f compose.yaml convert
    kompose.version: 1.34.0 (HEAD)
  labels:
    io.kompose.service: postgresql
  name: postgresql
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: postgresql
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose -f compose.yaml convert
        kompose.version: 1.34.0 (HEAD)
      labels:
        io.kompose.service: postgresql
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: lobechat
            - name: POSTGRES_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: lobe-db-secrets
                  key: PGVECTOR_POSTGRES_PASSWORD
          image: paradedb/paradedb:latest-pg17
          imagePullPolicy: IfNotPresent
          livenessProbe:
            exec:
              command:
                - /usr/bin/pg_isready
                - -U
                - postgres
            failureThreshold: 5
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 5
          name: lobe-postgres
          ports:
            - containerPort: 5432
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgresql-claim1
          resources:
            requests:
              cpu: 11m
              memory: 128Mi
            limits:
              memory: 256Mi
      restartPolicy: Always
      volumes:
        - name: postgresql-claim1
          persistentVolumeClaim:
            claimName: postgresql-claim1
