apps/lobe-chat/svc-casdoor.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose -f compose.yaml convert
    kompose.version: 1.34.0 (HEAD)
  labels:
    io.kompose.service: casdoor
  name: casdoor
spec:
  ports:
    - name: http
      port: 8000
  selector:
    io.kompose.service: casdoor
