apps/lobe-chat/svc-egress-casdoor.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    tailscale.com/tailnet-fqdn: casdoor.west-beta.ts.net
    tailscale.com/proxy-group: egress-proxies
    tailscale.com/proxy-class: accept-routes
  name: egress-casdoor
spec:
  externalName: unused
  type: ExternalName
  ports:
    - port: 443
      protocol: TCP
      name: https
