apps/lobe-chat/svc-lobe.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose -f compose.yaml convert
    kompose.version: 1.34.0 (HEAD)
  labels:
    io.kompose.service: lobe
  name: lobe
spec:
  ports:
    - name: http
      port: 3210
  selector:
    io.kompose.service: lobe
