apps/lobe-chat/svc-postgresql.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose -f compose.yaml convert
    kompose.version: 1.34.0 (HEAD)
  labels:
    io.kompose.service: postgresql
  name: postgresql
spec:
  ports:
    - name: postgresql
      port: 5432
  selector:
    io.kompose.service: postgresql
