apps/lobe-chat/ingress-lobe.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    tailscale.com/experimental-forward-cluster-traffic-via-ingress: "true"
  name: lobe
spec:
  ingressClassName: tailscale
  rules:
    - host: lobe.west-beta.ts.net
      http:
        paths:
          - backend:
              service:
                name: lobe
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - lobe.west-beta.ts.net
